added roster info

--- a/playing2.ipynb
+++ b/playing2.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -446,7 +446,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 4,
+   "metadata": {
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -455,53 +466,401 @@
    "outputs": [
     {
      "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Name</th>\n",
+       "      <th>AB</th>\n",
+       "      <th>R</th>\n",
+       "      <th>H</th>\n",
+       "      <th>dbls</th>\n",
+       "      <th>trps</th>\n",
+       "      <th>HR</th>\n",
+       "      <th>RBI</th>\n",
+       "      <th>BB</th>\n",
+       "      <th>SO</th>\n",
+       "      <th>...</th>\n",
+       "      <th>wOBA</th>\n",
+       "      <th>wRAA</th>\n",
+       "      <th>RAR</th>\n",
+       "      <th>WAR</th>\n",
+       "      <th>Fld</th>\n",
+       "      <th>SOperc</th>\n",
+       "      <th>last</th>\n",
+       "      <th>posName</th>\n",
+       "      <th>posnum</th>\n",
+       "      <th>position</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Tim Anderson</td>\n",
+       "      <td>45</td>\n",
+       "      <td>8</td>\n",
+       "      <td>12</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>3</td>\n",
+       "      <td>4</td>\n",
+       "      <td>4</td>\n",
+       "      <td>16</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.356</td>\n",
+       "      <td>1.7</td>\n",
+       "      <td>4.9</td>\n",
+       "      <td>0.5</td>\n",
+       "      <td>-0.7</td>\n",
+       "      <td>35.6</td>\n",
+       "      <td>Anderson</td>\n",
+       "      <td>Tim Anderson</td>\n",
+       "      <td>7</td>\n",
+       "      <td>Short stop</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Matt Davidson</td>\n",
+       "      <td>38</td>\n",
+       "      <td>10</td>\n",
+       "      <td>8</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>5</td>\n",
+       "      <td>10</td>\n",
+       "      <td>9</td>\n",
+       "      <td>16</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.427</td>\n",
+       "      <td>4.3</td>\n",
+       "      <td>4.1</td>\n",
+       "      <td>0.4</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>42.1</td>\n",
+       "      <td>Davidson</td>\n",
+       "      <td>Matt Davidson</td>\n",
+       "      <td>24</td>\n",
+       "      <td>DH</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Yolmer Sanchez</td>\n",
+       "      <td>38</td>\n",
+       "      <td>3</td>\n",
+       "      <td>11</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2</td>\n",
+       "      <td>1</td>\n",
+       "      <td>9</td>\n",
+       "      <td>2</td>\n",
+       "      <td>9</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.356</td>\n",
+       "      <td>1.5</td>\n",
+       "      <td>4.0</td>\n",
+       "      <td>0.4</td>\n",
+       "      <td>1.5</td>\n",
+       "      <td>23.7</td>\n",
+       "      <td>Sanchez</td>\n",
+       "      <td>Yolmer Sanchez</td>\n",
+       "      <td>5</td>\n",
+       "      <td>Third base</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Yoan Moncada</td>\n",
+       "      <td>49</td>\n",
+       "      <td>6</td>\n",
+       "      <td>9</td>\n",
+       "      <td>3</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>3</td>\n",
+       "      <td>8</td>\n",
+       "      <td>24</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.279</td>\n",
+       "      <td>-1.5</td>\n",
+       "      <td>3.1</td>\n",
+       "      <td>0.3</td>\n",
+       "      <td>1.1</td>\n",
+       "      <td>49.0</td>\n",
+       "      <td>Moncada</td>\n",
+       "      <td>Yoan Moncada</td>\n",
+       "      <td>10</td>\n",
+       "      <td>Second base</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Leury Garcia</td>\n",
+       "      <td>18</td>\n",
+       "      <td>3</td>\n",
+       "      <td>5</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>2</td>\n",
+       "      <td>1</td>\n",
+       "      <td>4</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.332</td>\n",
+       "      <td>0.3</td>\n",
+       "      <td>2.2</td>\n",
+       "      <td>0.2</td>\n",
+       "      <td>0.9</td>\n",
+       "      <td>22.2</td>\n",
+       "      <td>Garcia</td>\n",
+       "      <td>Leury Garcia</td>\n",
+       "      <td>28</td>\n",
+       "      <td>Outfield</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>Nick Delmonico</td>\n",
+       "      <td>32</td>\n",
+       "      <td>3</td>\n",
+       "      <td>9</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>3</td>\n",
+       "      <td>6</td>\n",
+       "      <td>9</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.371</td>\n",
+       "      <td>1.8</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.1</td>\n",
+       "      <td>-1.2</td>\n",
+       "      <td>28.1</td>\n",
+       "      <td>Delmonico</td>\n",
+       "      <td>Nick Delmonico</td>\n",
+       "      <td>30</td>\n",
+       "      <td>Outfield</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>Jose Abreu</td>\n",
+       "      <td>48</td>\n",
+       "      <td>6</td>\n",
+       "      <td>12</td>\n",
+       "      <td>2</td>\n",
+       "      <td>0</td>\n",
+       "      <td>3</td>\n",
+       "      <td>6</td>\n",
+       "      <td>2</td>\n",
+       "      <td>9</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.358</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>1.1</td>\n",
+       "      <td>0.1</td>\n",
+       "      <td>-0.5</td>\n",
+       "      <td>18.8</td>\n",
+       "      <td>Abreu</td>\n",
+       "      <td>Jose Abreu</td>\n",
+       "      <td>79</td>\n",
+       "      <td>First base</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>Tyler Saladino</td>\n",
+       "      <td>8</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>3</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.270</td>\n",
+       "      <td>-0.3</td>\n",
+       "      <td>0.7</td>\n",
+       "      <td>0.1</td>\n",
+       "      <td>0.8</td>\n",
+       "      <td>37.5</td>\n",
+       "      <td>Saladino</td>\n",
+       "      <td>Tyler Saladino</td>\n",
+       "      <td>20</td>\n",
+       "      <td>Infield</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>Welington Castillo</td>\n",
+       "      <td>28</td>\n",
+       "      <td>3</td>\n",
+       "      <td>6</td>\n",
+       "      <td>2</td>\n",
+       "      <td>0</td>\n",
+       "      <td>2</td>\n",
+       "      <td>4</td>\n",
+       "      <td>2</td>\n",
+       "      <td>7</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.330</td>\n",
+       "      <td>0.4</td>\n",
+       "      <td>0.1</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>-1.0</td>\n",
+       "      <td>25.0</td>\n",
+       "      <td>Castillo</td>\n",
+       "      <td>Welington Castillo</td>\n",
+       "      <td>21</td>\n",
+       "      <td>Catcher</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>Omar Narvaez</td>\n",
+       "      <td>16</td>\n",
+       "      <td>0</td>\n",
+       "      <td>3</td>\n",
+       "      <td>2</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>3</td>\n",
+       "      <td>3</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.290</td>\n",
+       "      <td>-0.3</td>\n",
+       "      <td>0.2</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>18.8</td>\n",
+       "      <td>Narvaez</td>\n",
+       "      <td>Omar Narvaez</td>\n",
+       "      <td>38</td>\n",
+       "      <td>Catcher</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10</th>\n",
+       "      <td>Avisail Garcia</td>\n",
+       "      <td>52</td>\n",
+       "      <td>5</td>\n",
+       "      <td>13</td>\n",
+       "      <td>3</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>3</td>\n",
+       "      <td>0</td>\n",
+       "      <td>12</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.280</td>\n",
+       "      <td>-1.4</td>\n",
+       "      <td>-2.7</td>\n",
+       "      <td>-0.3</td>\n",
+       "      <td>-1.3</td>\n",
+       "      <td>23.1</td>\n",
+       "      <td>Garcia</td>\n",
+       "      <td>Avisail Garcia</td>\n",
+       "      <td>26</td>\n",
+       "      <td>Outfield</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>11</th>\n",
+       "      <td>Adam Engel</td>\n",
+       "      <td>29</td>\n",
+       "      <td>0</td>\n",
+       "      <td>4</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>3</td>\n",
+       "      <td>5</td>\n",
+       "      <td>11</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.226</td>\n",
+       "      <td>-2.4</td>\n",
+       "      <td>-3.0</td>\n",
+       "      <td>-0.3</td>\n",
+       "      <td>-2.0</td>\n",
+       "      <td>37.9</td>\n",
+       "      <td>Engel</td>\n",
+       "      <td>Adam Engel</td>\n",
+       "      <td>15</td>\n",
+       "      <td>Outfield</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>12 rows × 25 columns</p>\n",
+       "</div>"
+      ],
       "text/plain": [
-       "Name       object\n",
-       "AB         object\n",
-       "R         float64\n",
-       "H         float64\n",
-       "2B        float64\n",
-       "3B        float64\n",
-       "HR        float64\n",
-       "RBI       float64\n",
-       "BB        float64\n",
-       "SO        float64\n",
-       "SB        float64\n",
-       "CS        float64\n",
-       "AVG       float64\n",
-       "OBP       float64\n",
-       "SLG       float64\n",
-       "wOBA      float64\n",
-       "wRAA      float64\n",
-       "RAR       float64\n",
-       "WAR       float64\n",
-       "Fld       float64\n",
-       "SOperc    float64\n",
-       "last       object\n",
-       "dtype: object"
+       "                  Name  AB   R   H  dbls  trps  HR  RBI  BB  SO     ...       \\\n",
+       "0         Tim Anderson  45   8  12     1     0   3    4   4  16     ...        \n",
+       "1        Matt Davidson  38  10   8     1     0   5   10   9  16     ...        \n",
+       "2       Yolmer Sanchez  38   3  11     1     2   1    9   2   9     ...        \n",
+       "3         Yoan Moncada  49   6   9     3     0   1    3   8  24     ...        \n",
+       "4         Leury Garcia  18   3   5     1     0   0    2   1   4     ...        \n",
+       "5       Nick Delmonico  32   3   9     1     0   1    3   6   9     ...        \n",
+       "6           Jose Abreu  48   6  12     2     0   3    6   2   9     ...        \n",
+       "7       Tyler Saladino   8   1   2     1     0   0    0   0   3     ...        \n",
+       "8   Welington Castillo  28   3   6     2     0   2    4   2   7     ...        \n",
+       "9         Omar Narvaez  16   0   3     2     0   0    1   3   3     ...        \n",
+       "10      Avisail Garcia  52   5  13     3     0   1    3   0  12     ...        \n",
+       "11          Adam Engel  29   0   4     1     0   0    3   5  11     ...        \n",
+       "\n",
+       "     wOBA  wRAA  RAR  WAR  Fld  SOperc       last             posName  posnum  \\\n",
+       "0   0.356   1.7  4.9  0.5 -0.7    35.6   Anderson        Tim Anderson       7   \n",
+       "1   0.427   4.3  4.1  0.4  NaN    42.1   Davidson       Matt Davidson      24   \n",
+       "2   0.356   1.5  4.0  0.4  1.5    23.7    Sanchez      Yolmer Sanchez       5   \n",
+       "3   0.279  -1.5  3.1  0.3  1.1    49.0    Moncada        Yoan Moncada      10   \n",
+       "4   0.332   0.3  2.2  0.2  0.9    22.2     Garcia        Leury Garcia      28   \n",
+       "5   0.371   1.8  1.0  0.1 -1.2    28.1  Delmonico      Nick Delmonico      30   \n",
+       "6   0.358   2.0  1.1  0.1 -0.5    18.8      Abreu          Jose Abreu      79   \n",
+       "7   0.270  -0.3  0.7  0.1  0.8    37.5   Saladino      Tyler Saladino      20   \n",
+       "8   0.330   0.4  0.1  0.0 -1.0    25.0   Castillo  Welington Castillo      21   \n",
+       "9   0.290  -0.3  0.2  0.0  0.0    18.8    Narvaez        Omar Narvaez      38   \n",
+       "10  0.280  -1.4 -2.7 -0.3 -1.3    23.1     Garcia      Avisail Garcia      26   \n",
+       "11  0.226  -2.4 -3.0 -0.3 -2.0    37.9      Engel          Adam Engel      15   \n",
+       "\n",
+       "       position  \n",
+       "0    Short stop  \n",
+       "1            DH  \n",
+       "2    Third base  \n",
+       "3   Second base  \n",
+       "4      Outfield  \n",
+       "5      Outfield  \n",
+       "6    First base  \n",
+       "7       Infield  \n",
+       "8       Catcher  \n",
+       "9       Catcher  \n",
+       "10     Outfield  \n",
+       "11     Outfield  \n",
+       "\n",
+       "[12 rows x 25 columns]"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "soxBSselect.loc[:, 'AB'] = soxBSselect['AB'].astype(int).astype(str)\n",
-    "\n",
-    "soxBSselect.dtypes"
+    "soxhit = pd.read_csv('csv/soxhit.csv', index_col=None)\n",
+    "soxroster = pd.read_csv('csv/soxroster.csv', index_col=None)\n",
+    "left = soxhit\n",
+    "right = soxroster\n",
+    "soxjoin = pd.merge(left, right, how='left', left_on='Name', right_on='posName', suffixes=('_x', '_y'))\n",
+    "soxjoin"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true,
-    "deletable": true,
-    "editable": true
-   },
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
