added batting charts

--- a/playing.ipynb
+++ b/playing.ipynb
@@ -333,8 +333,8 @@
     "# set styles\n",
     "\n",
     "mpl.rcParams['font.family'] = ['sans-serif']\n",
-    "mpl.rcParams['xtick.labelsize'] = 12\n",
-    "mpl.rcParams['ytick.labelsize'] = 12\n",
+    "mpl.rcParams['xtick.labelsize'] = 17\n",
+    "mpl.rcParams['ytick.labelsize'] = 17\n",
     "mpl.rcParams['lines.linewidth'] = 0.75\n",
     "\n",
     "mpl.rcParams['pdf.fonttype'] = 42 # allegedly allows text to be saved as editable\n",
@@ -684,7 +684,9 @@
    "cell_type": "code",
    "execution_count": 19,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [
     {
@@ -2927,7 +2929,9 @@
    "cell_type": "code",
    "execution_count": 39,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [
     {
