fixing PA vs BA

--- a/playing2.ipynb
+++ b/playing2.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -60,9 +60,104 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 3,
    "metadata": {
     "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Season             float64\n",
+       "Name                object\n",
+       "Team                object\n",
+       "Age                float64\n",
+       "G                  float64\n",
+       "AB                 float64\n",
+       "PA                 float64\n",
+       "H                  float64\n",
+       "1B                 float64\n",
+       "2B                 float64\n",
+       "3B                 float64\n",
+       "HR                 float64\n",
+       "R                  float64\n",
+       "RBI                float64\n",
+       "BB                 float64\n",
+       "IBB                float64\n",
+       "SO                 float64\n",
+       "HBP                float64\n",
+       "SF                 float64\n",
+       "SH                 float64\n",
+       "GDP                float64\n",
+       "SB                 float64\n",
+       "CS                 float64\n",
+       "AVG                float64\n",
+       "GB                 float64\n",
+       "FB                 float64\n",
+       "LD                 float64\n",
+       "IFFB               float64\n",
+       "Pitches            float64\n",
+       "Balls              float64\n",
+       "                    ...   \n",
+       "wCH (pi)           float64\n",
+       "wCS (pi)           float64\n",
+       "wCU (pi)           float64\n",
+       "wFA (pi)           float64\n",
+       "wFC (pi)           float64\n",
+       "wFS (pi)           float64\n",
+       "wKN (pi)           float64\n",
+       "wSB (pi)           float64\n",
+       "wSI (pi)           float64\n",
+       "wSL (pi)           float64\n",
+       "wXX (pi)           float64\n",
+       "wCH/C (pi)         float64\n",
+       "wCS/C (pi)         float64\n",
+       "wCU/C (pi)         float64\n",
+       "wFA/C (pi)         float64\n",
+       "wFC/C (pi)         float64\n",
+       "wFS/C (pi)         float64\n",
+       "wKN/C (pi)         float64\n",
+       "wSB/C (pi)         float64\n",
+       "wSI/C (pi)         float64\n",
+       "wSL/C (pi)         float64\n",
+       "wXX/C (pi)         float64\n",
+       "O-Swing% (pi)      float64\n",
+       "Z-Swing% (pi)      float64\n",
+       "Swing% (pi)        float64\n",
+       "O-Contact% (pi)    float64\n",
+       "Z-Contact% (pi)    float64\n",
+       "Contact% (pi)      float64\n",
+       "Zone% (pi)         float64\n",
+       "Pace (pi)          float64\n",
+       "Length: 287, dtype: object"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data=batting_stats(2018)\n",
+    "data.dtypes"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [
     {
@@ -220,7 +315,9 @@
    "cell_type": "code",
    "execution_count": 10,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [
     {
@@ -303,7 +400,9 @@
    "cell_type": "code",
    "execution_count": 11,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [
     {
@@ -441,7 +540,9 @@
    "cell_type": "code",
    "execution_count": 15,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [
     {
@@ -594,7 +695,9 @@
    "cell_type": "code",
    "execution_count": 18,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [
     {
@@ -644,7 +747,9 @@
    "cell_type": "code",
    "execution_count": 21,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [
     {
@@ -846,7 +951,9 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [],
    "source": []
@@ -855,7 +962,9 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [],
    "source": []
@@ -864,7 +973,9 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [],
    "source": []
@@ -873,7 +984,9 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [],
    "source": []
@@ -3562,13 +3675,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {
     "collapsed": false,
     "deletable": true,
     "editable": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'batting_stats' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-1-d7bcc2d90fd1>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mdata\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mbatting_stats\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m2018\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m: name 'batting_stats' is not defined"
+     ]
+    }
+   ],
    "source": [
     "data = batting_stats(2018)"
    ]
